# py-parallel-kmeans

./: .gitignore  GPU_IMPLEMENTATION_CHECKLIST.md  README.md  SETUP.md  analysis_summary.txt  analyze_timings.py  generate_datasets.py  kmeans_timing_results.json  main.py  requirements.txt  timing_summary.json  vizualize_datasets.py
cpp_cuda_kmeans/: CMakeLists.txt  README.md
cpp_cuda_kmeans/scripts/: generate_datasets.cpp
cpp_cuda_kmeans/src/: main.cpp
cpp_cuda_kmeans/src/core/: kmeans_base.cpp  kmeans_base.h  kmeans_cpu.cpp  kmeans_cpu.h  kmeans_cpu_omp.cpp  kmeans_cpu_omp.h  kmeans_gpu.cu  kmeans_gpu.h
cpp_cuda_kmeans/src/data/: dataset.cpp  dataset.h  registry.cpp  registry.h  validation.cpp  validation.h
cpp_cuda_kmeans/src/experiments/: config.cpp  config.h  runner.cpp  runner.h  suite.cpp  suite.h
cpp_cuda_kmeans/src/metrics/: metrics.cpp  metrics.h  timers.cpp  timers.h
cpp_cuda_kmeans/src/utils/: logging.cpp  logging.h
kmeans/: __init__.py  main.py
kmeans/core/: __init__.py  base.py  cpu_multiprocessing.py  cpu_numpy.py  gpu_numpy.py
kmeans/data/: __init__.py  dataset.py  registry.py  validation.py
kmeans/experiments/: __init__.py  config.py  runner.py  suite.py
kmeans/metrics/: __init__.py  metrics.py  timers.py
kmeans/utils/: __init__.py  logging.py
scripts/: __init__.py  analyze_gpu_results.py  analyze_timings.py  calculate_metrics_from_summary.py  generate_datasets.py  vizualize_datasets.py
tests/: __init__.py  conftest.py
tests/test_core/: __init__.py  test_consistency.py  test_cpu_numpy.py
tests/test_metrics/: __init__.py  (+2 more)
